// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sprite unpack-description file selection should unpack every described file 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Workers: <workers> (auto)",
    "Unpacking texture descriptions: <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, from <resources>/gamedata/textures to <sandbox>/all",
    "Unpacking for 1 files",
    "Unpacked 1 files",
  ],
}
`;

exports[`sprite unpack-description file selection should unpack only the named file 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Workers: <workers> (auto)",
    "Unpacking texture descriptions: <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, from <resources>/gamedata/textures to <sandbox>/selected",
    "Unpacking for 1 files",
    "Unpacked 1 files",
  ],
}
`;

exports[`sprite unpack-description file selection should write the expected files 1`] = `
[
  {
    "path": "all/ui/ui_test_sheet/ui_test_end.dds",
    "sha256": "508068286e0a4c9637a75433d15779c7cf17a24e2f1d4a41c8423688e002a798",
    "size": 4224,
  },
  {
    "path": "all/ui/ui_test_sheet/ui_test_left.dds",
    "sha256": "343370f1905841cb2509ddebaec33943598c735f721906bf933f261dd86000a3",
    "size": 4224,
  },
  {
    "path": "all/ui/ui_test_sheet/ui_test_mid.dds",
    "sha256": "8450593fedf5a4d9288b558eb5e3c07424984d0c82ed43eefb98c1d641b9a5b3",
    "size": 4224,
  },
  {
    "path": "all/ui/ui_test_sheet/ui_test_right.dds",
    "sha256": "28fc70fb441016d921d04369a343667e5e8f88971def3ddf9faa36b4becbfb29",
    "size": 4224,
  },
  {
    "path": "selected/ui/ui_test_sheet/ui_test_end.dds",
    "sha256": "508068286e0a4c9637a75433d15779c7cf17a24e2f1d4a41c8423688e002a798",
    "size": 4224,
  },
  {
    "path": "selected/ui/ui_test_sheet/ui_test_left.dds",
    "sha256": "343370f1905841cb2509ddebaec33943598c735f721906bf933f261dd86000a3",
    "size": 4224,
  },
  {
    "path": "selected/ui/ui_test_sheet/ui_test_mid.dds",
    "sha256": "8450593fedf5a4d9288b558eb5e3c07424984d0c82ed43eefb98c1d641b9a5b3",
    "size": 4224,
  },
  {
    "path": "selected/ui/ui_test_sheet/ui_test_right.dds",
    "sha256": "28fc70fb441016d921d04369a343667e5e8f88971def3ddf9faa36b4becbfb29",
    "size": 4224,
  },
]
`;
